internal/kgateway/translator/gateway/testutils/outputs/jwt/httproute-jwt.yaml
Clusters:
  - connectTimeout: 5s
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    ignoreHealthOnHostRemoval: true
    metadata: {}
    name: kube_default_example-svc_80
    type: EDS
  - connectTimeout: 5s
    metadata: {}
    name: test-backend-plugin_default_example-svc_80
Listeners:
  - address:
      socketAddress:
        address: '::'
        ipv4Compat: true
        portValue: 80
    filterChains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              httpFilters:
                - name: jwt/default/jwt-ext-1
                  typedConfig:
                    '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                    providers:
                      jwt-ext-1_default_my-example1:
                        claimToHeaders:
                          - claimName: org
                            headerName: x-org
                          - claimName: email
                            headerName: x-email
                        issuer: https://dev1.example.com
                        localJwks:
                          inlineString: '{"keys":[{"use":"sig","kty":"RSA","alg":"RS256","n":"ruK9KacQjDePRyfG7oPIaqAIyCeOCBIGB2nBbDLGp1Szdm7rsWcrzGf7Avpa_ijLV9huoNvpdflld4B-SaT7m3EDDMDUyA4LayJC5JBI10Qfu3Qn8BEpcdN2uRiycXOzgsoIXneXp9hENlS5Vsr3ur5BaBCc-BZZRRaXDTLy6KyD1Pyd6XRsxyZXt_SYOIww0NSt5u0CTyZUGJhQungJpI8Hhrzdf87mLZGZd16dOGObE5LqFwk2prN3D0-owLsA25WJOPZXizxpTB4tPvJuYGATajDpzrHf-WXgOgvwyxaHJSN_fE-eFuRT3ooDaAuytsfYotsn4z_ajdEPSwXYCw","e":"AQAB"}]}'
                        payloadInMetadata: payload
                    requirementMap:
                      jwt-ext-1_default_requirements:
                        providerName: jwt-ext-1_default_my-example1
                - name: envoy.filters.http.router
                  typedConfig:
                    '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              mergeSlashes: true
              normalizePath: true
              rds:
                configSource:
                  ads: {}
                  resourceApiVersion: V3
                routeConfigName: listener~80
              statPrefix: http
              useRemoteAddress: true
        name: listener~80
    name: listener~80
Routes:
  - ignorePortInHostMatching: true
    name: listener~80
    virtualHosts:
      - domains:
          - example.com
        name: listener~80~example_com
        routes:
          - match:
              pathSeparatedPrefix: /foo
            metadata:
              filterMetadata:
                merge.TrafficPolicy.gateway.kgateway.dev:
                  jwt:
                    - gateway.kgateway.dev/TrafficPolicy/default/parent-httproute-test
            name: listener~80~example_com-route-0-httproute-example-route-default-0-0-matcher-0
            route:
              cluster: kube_default_example-svc_80
              clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
            typedPerFilterConfig:
              jwt/default/jwt-ext-1:
                '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
                requirementName: jwt-ext-1_default_requirements
          - match:
              pathSeparatedPrefix: /bar
            metadata:
              filterMetadata:
                merge.TrafficPolicy.gateway.kgateway.dev:
                  jwt:
                    - gateway.kgateway.dev/TrafficPolicy/default/parent-httproute-test
            name: listener~80~example_com-route-1-httproute-example-route-default-1-0-matcher-0
            route:
              cluster: kube_default_example-svc_80
              clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
            typedPerFilterConfig:
              jwt/default/jwt-ext-1:
                '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
                requirementName: jwt-ext-1_default_requirements
